[*] 日常优化